feat: ampliar secciÃ³n de reflexiones con iconos

--- a/index.html
+++ b/index.html
@@ -328,44 +328,82 @@
     <div class="reflexiones-grid">
       <article class="reflexion-card">
         <div class="reflexion-card-body">
-          <span class="reflexion-badge">01</span>
+          <div class="reflexion-header">
+            <span class="reflexion-badge">01</span>
+            <span class="reflexion-icon"><i class="fa-solid fa-book-open" aria-hidden="true"></i></span>
+          </div>
           <h3>Lo que he aprendido</h3>
           <p>He consolidado bases sólidas en programación, entendiendo a fondo el control de flujo, funciones y POO. También he aprendido a valorar la importancia de un código limpio, bien estructurado y documentado.</p>
         </div>
       </article>
       <article class="reflexion-card">
         <div class="reflexion-card-body">
-          <span class="reflexion-badge">02</span>
+          <div class="reflexion-header">
+            <span class="reflexion-badge">02</span>
+            <span class="reflexion-icon"><i class="fa-solid fa-bullseye" aria-hidden="true"></i></span>
+          </div>
           <h3>Retos y objetivos</h3>
           <p>Estoy incorporando nuevas herramientas como Java y Git, mejorando mis habilidades en JavaScript y comenzando a explorar backend para poder afrontar proyectos más completos y complejos.</p>
         </div>
       </article>
       <article class="reflexion-card">
         <div class="reflexion-card-body">
-          <span class="reflexion-badge">03</span>
+          <div class="reflexion-header">
+            <span class="reflexion-badge">03</span>
+            <span class="reflexion-icon"><i class="fa-solid fa-people-group" aria-hidden="true"></i></span>
+          </div>
           <h3>Trabajo en equipo y responsabilidad</h3>
           <p>He comprendido que un proyecto no depende únicamente del código, sino también de la comunicación, la coordinación y la responsabilidad compartida. La constancia y la colaboración son tan importantes como la lógica y la sintaxis.</p>
         </div>
       </article>
       <article class="reflexion-card">
         <div class="reflexion-card-body">
-          <span class="reflexion-badge">04</span>
+          <div class="reflexion-header">
+            <span class="reflexion-badge">04</span>
+            <span class="reflexion-icon"><i class="fa-solid fa-arrow-trend-up" aria-hidden="true"></i></span>
+          </div>
           <h3>Evolución técnica y mentalidad</h3>
           <p>Aprender lenguajes como PHP, TypeScript o Node.js me ha enseñado que programar no es memorizar sintaxis, sino desarrollar una mentalidad flexible, analítica y orientada a resolver problemas reales.</p>
         </div>
       </article>
       <article class="reflexion-card">
         <div class="reflexion-card-body">
-          <span class="reflexion-badge">05</span>
+          <div class="reflexion-header">
+            <span class="reflexion-badge">05</span>
+            <span class="reflexion-icon"><i class="fa-solid fa-clock" aria-hidden="true"></i></span>
+          </div>
           <h3>Gestión del tiempo y prioridades</h3>
           <p>Trabajar en proyectos más serios me ha enseñado a planificar mejor, dividir tareas y priorizar de manera efectiva. La organización es clave para garantizar calidad en el trabajo, al igual que el conocimiento técnico.</p>
         </div>
       </article>
       <article class="reflexion-card">
         <div class="reflexion-card-body">
-          <span class="reflexion-badge">06</span>
+          <div class="reflexion-header">
+            <span class="reflexion-badge">06</span>
+            <span class="reflexion-icon"><i class="fa-solid fa-handshake-angle" aria-hidden="true"></i></span>
+          </div>
           <h3>Visión profesional</h3>
           <p>Cada vez entiendo más que ser desarrollador implica no solo escribir código, sino crear soluciones, colaborar con el equipo y mantener una ética de trabajo profesional que aporte valor a cualquier proyecto.</p>
+        </div>
+      </article>
+      <article class="reflexion-card">
+        <div class="reflexion-card-body">
+          <div class="reflexion-header">
+            <span class="reflexion-badge">07</span>
+            <span class="reflexion-icon"><i class="fa-solid fa-rocket" aria-hidden="true"></i></span>
+          </div>
+          <h3>Innovación constante</h3>
+          <p>Me motiva experimentar con nuevas arquitecturas y patrones para mantener los proyectos escalables y preparados para el futuro. Cada reto es una oportunidad de mejorar procesos y rendimiento.</p>
+        </div>
+      </article>
+      <article class="reflexion-card">
+        <div class="reflexion-card-body">
+          <div class="reflexion-header">
+            <span class="reflexion-badge">08</span>
+            <span class="reflexion-icon"><i class="fa-solid fa-comments" aria-hidden="true"></i></span>
+          </div>
+          <h3>Comunidad y mentoría</h3>
+          <p>Compartir conocimientos en meetups y ayudar a otros compañeros me ha enseñado a explicar conceptos complejos con claridad y a seguir aprendiendo de perspectivas diferentes.</p>
         </div>
       </article>
     </div>
