cambios hechos en la tarjeta de contacto

--- a/index.html
+++ b/index.html
@@ -492,70 +492,60 @@
   <!-- Sección de contacto -->
   <section id="contacto">
     <h2>Contacto</h2>
-    <p class="contact-subtitle">¿Quieres ponerte en contacto conmigo? Envíame un mensaje y te responderé lo antes posible.</p>
+    <p class="contact-subtitle">¿Quieres contarme tu proyecto? Escríbeme y te responderé con la mayor brevedad.</p>
     <div class="contact-wrapper">
-      <div class="contact-card contact-summary">
-        <div class="contact-summary-head">
-          <span class="contact-badge">Conectemos</span>
-          <h3>Redes y acceso directo</h3>
-        </div>
-        <p class="contact-lead">Elige el canal que prefieras o déjame un mensaje desde el formulario.</p>
-        <div class="contact-social-icons">
-          <a href="https://www.linkedin.com/in/pablo-arenas-mancebo-6a719b354/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-          <a href="https://github.com/Areman-05" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
-            <i class="fab fa-github"></i>
-          </a>
-          <a href="tel:+34684269329" aria-label="Teléfono">
-            <i class="fas fa-phone"></i>
-          </a>
-          <a href="mailto:pab4822@outlook.com" aria-label="Email">
-            <i class="fas fa-envelope"></i>
-          </a>
-        </div>
-        <div class="contact-direct-info">
-          <div>
-            <span class="contact-direct-label">Teléfono</span>
-            <a href="tel:+34684269329">+34 684 26 93 29</a>
-          </div>
-          <div>
-            <span class="contact-direct-label">Email</span>
-            <a href="mailto:pab4822@outlook.com">pab4822@outlook.com</a>
-          </div>
-        </div>
-        <p class="contact-hint">Responderé en cuanto pueda.</p>
-      </div>
       <div class="contact-card contact-form-card">
         <div class="contact-summary-head">
-          <span class="contact-badge contact-badge--blue">Mensaje</span>
-          <h3>Envíame un mensaje</h3>
+          <span class="contact-badge contact-badge--blue">Contacto</span>
+          <h3>Hablemos en detalle</h3>
+        </div>
+        <div class="contact-intro">
+          <p class="contact-lead">Cuéntame qué necesitas y buscaremos juntos la mejor solución. Suelo responder en menos de un día laborable.</p>
+          <div class="contact-direct-info contact-direct-info--inline">
+            <div>
+              <span class="contact-direct-label">Correo</span>
+              <a href="mailto:pab4822@outlook.com">pab4822@outlook.com</a>
+            </div>
+            <div>
+              <span class="contact-direct-label">Teléfono</span>
+              <a href="tel:+34684269329">+34 684 26 93 29</a>
+            </div>
+            <div>
+              <span class="contact-direct-label">LinkedIn</span>
+              <a href="https://www.linkedin.com/in/pablo-arenas-mancebo-6a719b354/" target="_blank" rel="noopener noreferrer">/pablo-arenas-mancebo</a>
+            </div>
+            <div>
+              <span class="contact-direct-label">GitHub</span>
+              <a href="https://github.com/Areman-05" target="_blank" rel="noopener noreferrer">@Areman-05</a>
+            </div>
+          </div>
+          <p class="contact-hint">Si prefieres otro canal, coméntalo en el formulario.</p>
         </div>
         <form id="contact-form" action="https://formspree.io/f/mbljeevl" method="POST">
           <div class="form-grid">
             <div class="form-column">
               <label>
                 <span>Nombre</span>
-                <input type="text" name="nombre" placeholder="Tu nombre" required>
+                <input type="text" name="nombre" placeholder="¿Cómo te llamas?" required>
               </label>
               <label>
                 <span>Email</span>
-                <input type="email" name="email" placeholder="tu@ejemplo.com" required>
+                <input type="email" name="email" placeholder="tu@correo.com" required>
               </label>
               <label>
                 <span>Asunto</span>
-                <input type="text" name="asunto" placeholder="Sobre qué quieres hablar" required>
+                <input type="text" name="asunto" placeholder="Tema del mensaje" required>
               </label>
             </div>
             <div class="form-column">
               <label class="form-field--message">
                 <span>Mensaje</span>
-                <textarea name="mensaje" placeholder="Escribe tu mensaje aquí" required></textarea>
+                <textarea name="mensaje" placeholder="Cuéntame qué tienes en mente" required></textarea>
               </label>
             </div>
           </div>
           <button type="submit" class="contact-btn">Enviar mensaje</button>
-          <p class="contact-footnote">También puedes contactarme por LinkedIn o GitHub.</p>
+          <p class="contact-footnote">También puedes escribirme por LinkedIn o GitHub si lo prefieres.</p>
         </form>
       </div>
     </div>
