--- a/index.html
+++ b/index.html
@@ -505,59 +505,45 @@
             <span class="contact-chip contact-chip--alt"><i class="fa-solid fa-language" aria-hidden="true"></i>Español / Inglés</span>
             <span class="contact-chip contact-chip--focus"><i class="fa-solid fa-globe" aria-hidden="true"></i>Remoto & Barcelona</span>
           </div>
-          <div class="contact-meta">
-            <div class="contact-meta-item">
-              <i class="fa-regular fa-clock" aria-hidden="true"></i>
-              <div>
-                <h4>Respuesta media</h4>
-                <p>Menos de 24h en días laborables para mensajes con contexto claro.</p>
-              </div>
+          <div class="contact-columns">
+            <div class="contact-copy">
+              <p class="contact-lead">Cuéntame qué necesitas y diseñaremos juntos la solución. Me implico en cada proyecto como si fuera propio.</p>
+              <ul class="contact-highlights">
+                <li><i class="fa-regular fa-clock" aria-hidden="true"></i>Respondo en menos de 24h en días laborables.</li>
+                <li><i class="fa-solid fa-location-dot" aria-hidden="true"></i>Trabajo desde Barcelona con equipos remotos o presenciales.</li>
+                <li><i class="fa-solid fa-handshake-angle" aria-hidden="true"></i>Especializado en apps multiplataforma y webs modernas.</li>
+              </ul>
             </div>
-            <div class="contact-meta-item">
-              <i class="fa-solid fa-location-dot" aria-hidden="true"></i>
-              <div>
-                <h4>Ubicación</h4>
-                <p>Desde Barcelona, colaborando con equipos remotos o presenciales.</p>
-              </div>
+            <div class="contact-direct-info contact-direct-info--panel">
+              <a class="contact-direct-entry" href="mailto:pab4822@outlook.com">
+                <i class="fa-solid fa-envelope" aria-hidden="true"></i>
+                <div>
+                  <span>Correo</span>
+                  <strong>pab4822@outlook.com</strong>
+                </div>
+              </a>
+              <a class="contact-direct-entry" href="tel:+34684269329">
+                <i class="fa-solid fa-phone" aria-hidden="true"></i>
+                <div>
+                  <span>Teléfono</span>
+                  <strong>+34 684 26 93 29</strong>
+                </div>
+              </a>
+              <a class="contact-direct-entry" href="https://www.linkedin.com/in/pablo-arenas-mancebo-6a719b354/" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+                <div>
+                  <span>LinkedIn</span>
+                  <strong>/pablo-arenas-mancebo</strong>
+                </div>
+              </a>
+              <a class="contact-direct-entry" href="https://github.com/Areman-05" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-github" aria-hidden="true"></i>
+                <div>
+                  <span>GitHub</span>
+                  <strong>@Areman-05</strong>
+                </div>
+              </a>
             </div>
-            <div class="contact-meta-item">
-              <i class="fa-solid fa-handshake-angle" aria-hidden="true"></i>
-              <div>
-                <h4>Proyectos ideales</h4>
-                <p>Aplicaciones multiplataforma, webs modernas y soporte técnico puntual.</p>
-              </div>
-            </div>
-          </div>
-          <p class="contact-lead">Cuéntame qué necesitas y diseñaremos juntos la solución. Me implico en cada proyecto como si fuera propio.</p>
-          <div class="contact-direct-info contact-direct-info--panel">
-            <a class="contact-direct-entry" href="mailto:pab4822@outlook.com">
-              <i class="fa-solid fa-envelope" aria-hidden="true"></i>
-              <div>
-                <span>Correo</span>
-                <strong>pab4822@outlook.com</strong>
-              </div>
-            </a>
-            <a class="contact-direct-entry" href="tel:+34684269329">
-              <i class="fa-solid fa-phone" aria-hidden="true"></i>
-              <div>
-                <span>Teléfono</span>
-                <strong>+34 684 26 93 29</strong>
-              </div>
-            </a>
-            <a class="contact-direct-entry" href="https://www.linkedin.com/in/pablo-arenas-mancebo-6a719b354/" target="_blank" rel="noopener noreferrer">
-              <i class="fab fa-linkedin-in" aria-hidden="true"></i>
-              <div>
-                <span>LinkedIn</span>
-                <strong>/pablo-arenas-mancebo</strong>
-              </div>
-            </a>
-            <a class="contact-direct-entry" href="https://github.com/Areman-05" target="_blank" rel="noopener noreferrer">
-              <i class="fab fa-github" aria-hidden="true"></i>
-              <div>
-                <span>GitHub</span>
-                <strong>@Areman-05</strong>
-              </div>
-            </a>
           </div>
           <p class="contact-hint">Si prefieres otro canal, coméntalo en el formulario.</p>
         </div>
