RediseÃ±o completo de secciÃ³n proyectos: layout split-screen con barra de progreso vertical y cambio dinÃ¡mico de imÃ¡genes

--- a/index.html
+++ b/index.html
@@ -270,72 +270,59 @@
   <!-- Sección de proyectos -->
   <section id="proyectos">
     <h2>Proyectos</h2>
-    <div class="proyectos-container">
-      <div class="proyecto-hero">
-        <div class="proyecto-hero-image">
-          <img id="proyecto-hero-img" src="imagenes/computer-programming-vs-computer-science-image_blog.jpg" alt="Proyecto destacado">
-          <div class="proyecto-hero-overlay"></div>
+    <div class="proyectos-split-container">
+      <div class="proyectos-content-wrapper">
+        <div class="proyectos-text-section">
+          <div class="proyectos-progress-bar">
+            <div class="proyectos-progress-fill" id="proyectos-progress"></div>
+          </div>
+          <div class="proyectos-text-content">
+            <article class="proyecto-text-item active" data-index="0" data-image="imagenes/computer-programming-vs-computer-science-image_blog.jpg">
+              <h3>To-Do List App</h3>
+              <p>Una aplicación web moderna para organizar tareas con filtros avanzados y persistencia local. Desarrollada con React y TypeScript, demuestra habilidades en manejo de estado, diseño modular y almacenamiento en localStorage para una experiencia fluida sin necesidad de backend.</p>
+              <div class="proyecto-text-tags">
+                <span class="proyecto-text-tag">React</span>
+                <span class="proyecto-text-tag">TypeScript</span>
+                <span class="proyecto-text-tag">CSS Modules</span>
+              </div>
+              <a class="proyecto-text-btn" href="https://github.com/Areman-05/To-Do-List-App" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-github" aria-hidden="true"></i>
+                Ver en GitHub
+              </a>
+            </article>
+            <article class="proyecto-text-item" data-index="1" data-image="imagenes/space-shooter-cover.jpg">
+              <h3>Space Shooter</h3>
+              <p>Videojuego arcade 2D desarrollado en Python con Pygame. Los jugadores pilotan una nave espacial enfrentándose a oleadas de enemigos. Este proyecto demuestra habilidades en gestión de eventos, animaciones por sprites y sincronización de efectos de sonido para crear una experiencia inmersiva.</p>
+              <div class="proyecto-text-tags">
+                <span class="proyecto-text-tag">Python</span>
+                <span class="proyecto-text-tag">Pygame</span>
+                <span class="proyecto-text-tag">Game Design</span>
+              </div>
+              <a class="proyecto-text-btn" href="https://github.com/Areman-05/Space-Shooter-Project" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-github" aria-hidden="true"></i>
+                Ver en GitHub
+              </a>
+            </article>
+            <article class="proyecto-text-item" data-index="2" data-image="imagenes/cuales-son-lenguajes-programacion.png">
+              <h3>Ejercicios PHP</h3>
+              <p>Colección completa de prácticas para dominar PHP desde los fundamentos. Incluye ejercicios sobre control de flujo, arrays y funciones, aplicando buenas prácticas de programación. El proyecto demuestra habilidades en separación lógica/vista y creación de componentes reutilizables con HTML y Bootstrap.</p>
+              <div class="proyecto-text-tags">
+                <span class="proyecto-text-tag">PHP</span>
+                <span class="proyecto-text-tag">HTML</span>
+                <span class="proyecto-text-tag">Bootstrap</span>
+              </div>
+              <a class="proyecto-text-btn" href="https://github.com/Areman-05/php_exercicis" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-github" aria-hidden="true"></i>
+                Ver en GitHub
+              </a>
+            </article>
+          </div>
         </div>
-      </div>
-      <div class="proyectos-scroll-wrapper">
-        <div class="proyectos-scroll" id="proyectos-scroll">
-          <article class="proyecto-card" data-image="imagenes/computer-programming-vs-computer-science-image_blog.jpg" data-index="0">
-            <div class="proyecto-card-inner">
-              <div class="proyecto-card-number">01</div>
-              <div class="proyecto-card-content">
-                <h3>To-Do List App</h3>
-                <p class="proyecto-subtitulo">Aplicación web para organizar tareas con filtros y persistencia local.</p>
-                <div class="proyecto-tags">
-                  <span class="proyecto-tag">React</span>
-                  <span class="proyecto-tag">TypeScript</span>
-                  <span class="proyecto-tag">CSS Modules</span>
-                </div>
-                <p class="proyecto-aprendizaje"><span>Aprendizaje:</span> Manejo de estado, diseño modular y almacenamiento en localStorage.</p>
-                <a class="proyecto-btn" href="https://github.com/Areman-05/To-Do-List-App" target="_blank" rel="noopener noreferrer">
-                  <i class="fab fa-github" aria-hidden="true"></i>
-                  Ver en GitHub
-                </a>
-              </div>
-            </div>
-          </article>
-          <article class="proyecto-card" data-image="imagenes/space-shooter-cover.jpg" data-index="1">
-            <div class="proyecto-card-inner">
-              <div class="proyecto-card-number">02</div>
-              <div class="proyecto-card-content">
-                <h3>Space Shooter</h3>
-                <p class="proyecto-subtitulo">Videojuego arcade 2D en el que pilotas una nave espacial y eliminas oleadas de enemigos.</p>
-                <div class="proyecto-tags">
-                  <span class="proyecto-tag">Python</span>
-                  <span class="proyecto-tag">Pygame</span>
-                  <span class="proyecto-tag">Game Design</span>
-                </div>
-                <p class="proyecto-aprendizaje"><span>Aprendizaje:</span> Gestión de eventos, animaciones por sprites y sincronización de efectos de sonido.</p>
-                <a class="proyecto-btn" href="https://github.com/Areman-05/Space-Shooter-Project" target="_blank" rel="noopener noreferrer">
-                  <i class="fab fa-github" aria-hidden="true"></i>
-                  Ver en GitHub
-                </a>
-              </div>
-            </div>
-          </article>
-          <article class="proyecto-card" data-image="imagenes/cuales-son-lenguajes-programacion.png" data-index="2">
-            <div class="proyecto-card-inner">
-              <div class="proyecto-card-number">03</div>
-              <div class="proyecto-card-content">
-                <h3>Ejercicios PHP</h3>
-                <p class="proyecto-subtitulo">Colección de prácticas para dominar PHP: control de flujo, arrays y funciones.</p>
-                <div class="proyecto-tags">
-                  <span class="proyecto-tag">PHP</span>
-                  <span class="proyecto-tag">HTML</span>
-                  <span class="proyecto-tag">Bootstrap</span>
-                </div>
-                <p class="proyecto-aprendizaje"><span>Aprendizaje:</span> Buenas prácticas en PHP, separación lógica/vista y componentes reutilizables.</p>
-                <a class="proyecto-btn" href="https://github.com/Areman-05/php_exercicis" target="_blank" rel="noopener noreferrer">
-                  <i class="fab fa-github" aria-hidden="true"></i>
-                  Ver en GitHub
-                </a>
-              </div>
-            </div>
-          </article>
+        <div class="proyectos-image-section">
+          <div class="proyectos-image-wrapper">
+            <img id="proyectos-main-image" src="imagenes/computer-programming-vs-computer-science-image_blog.jpg" alt="Proyecto destacado">
+            <div class="proyectos-image-overlay"></div>
+          </div>
         </div>
       </div>
     </div>
