--- a/index.html
+++ b/index.html
@@ -263,6 +263,128 @@
             </div>
           </div>
         </div>
+        <!-- Carrusel de iconos -->
+        <div class="skills-carousel-wrapper">
+          <div class="skills-carousel-fade-left"></div>
+          <div class="skills-carousel-fade-right"></div>
+          <div class="skills-carousel">
+            <div class="skills-carousel-track">
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-kotlin" aria-hidden="true"></i>
+                <span>Kotlin</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-android" aria-hidden="true"></i>
+                <span>Android</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-js" aria-hidden="true"></i>
+                <span>JavaScript</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-php" aria-hidden="true"></i>
+                <span>PHP</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-react" aria-hidden="true"></i>
+                <span>React</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-node-js" aria-hidden="true"></i>
+                <span>Node.js</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-java" aria-hidden="true"></i>
+                <span>Java</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-python" aria-hidden="true"></i>
+                <span>Python</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-html5" aria-hidden="true"></i>
+                <span>HTML5</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-css3-alt" aria-hidden="true"></i>
+                <span>CSS3</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-git-alt" aria-hidden="true"></i>
+                <span>Git</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-github" aria-hidden="true"></i>
+                <span>GitHub</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-swift" aria-hidden="true"></i>
+                <span>Swift</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-docker" aria-hidden="true"></i>
+                <span>Docker</span>
+              </div>
+              <!-- Duplicados para efecto infinito -->
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-kotlin" aria-hidden="true"></i>
+                <span>Kotlin</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-android" aria-hidden="true"></i>
+                <span>Android</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-js" aria-hidden="true"></i>
+                <span>JavaScript</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-php" aria-hidden="true"></i>
+                <span>PHP</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-react" aria-hidden="true"></i>
+                <span>React</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-node-js" aria-hidden="true"></i>
+                <span>Node.js</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-java" aria-hidden="true"></i>
+                <span>Java</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-python" aria-hidden="true"></i>
+                <span>Python</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-html5" aria-hidden="true"></i>
+                <span>HTML5</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-css3-alt" aria-hidden="true"></i>
+                <span>CSS3</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-git-alt" aria-hidden="true"></i>
+                <span>Git</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-github" aria-hidden="true"></i>
+                <span>GitHub</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-swift" aria-hidden="true"></i>
+                <span>Swift</span>
+              </div>
+              <div class="skills-carousel-item">
+                <i class="fa-brands fa-docker" aria-hidden="true"></i>
+                <span>Docker</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
