Añadir barras de progreso y arreglar posicionamiento del carrusel - Barras de progreso añadidas a lenguajes principales (Kotlin, Swift, Jetpack Compose, HTML/CSS, JavaScript, PHP) - Carrusel corregido para ocupar todo el ancho de la página correctamente

--- a/index.html
+++ b/index.html
@@ -155,13 +155,65 @@
       <div class="skills-text-grid">
         <div class="skills-text-column">
           <h3><i class="fa-solid fa-mobile-screen-button" aria-hidden="true"></i>Desarrollo Móvil</h3>
-          <p><strong>Kotlin</strong> (Avanzado) · <strong>Swift</strong> (Intermedio) · <strong>Jetpack Compose</strong> (Intermedio)</p>
+          <div class="skill-item">
+            <div class="skill-item-header">
+              <span class="skill-name"><i class="fa-brands fa-android" aria-hidden="true"></i>Kotlin</span>
+              <span class="skill-level">Avanzado</span>
+            </div>
+            <div class="skill-progress">
+              <div class="skill-progress-fill" style="--progress:70%"></div>
+            </div>
+          </div>
+          <div class="skill-item">
+            <div class="skill-item-header">
+              <span class="skill-name"><i class="fa-brands fa-apple" aria-hidden="true"></i>Swift</span>
+              <span class="skill-level">Intermedio</span>
+            </div>
+            <div class="skill-progress">
+              <div class="skill-progress-fill" style="--progress:45%"></div>
+            </div>
+          </div>
+          <div class="skill-item">
+            <div class="skill-item-header">
+              <span class="skill-name"><i class="fa-solid fa-cubes" aria-hidden="true"></i>Jetpack Compose</span>
+              <span class="skill-level">Intermedio</span>
+            </div>
+            <div class="skill-progress">
+              <div class="skill-progress-fill" style="--progress:45%"></div>
+            </div>
+          </div>
           <p class="skills-subtext">Android Studio · Material Design · Core Data</p>
         </div>
         
         <div class="skills-text-column">
           <h3><i class="fa-solid fa-globe" aria-hidden="true"></i>Desarrollo Web</h3>
-          <p><strong>HTML / CSS</strong> (Experto) · <strong>JavaScript</strong> (Intermedio) · <strong>PHP</strong> (Intermedio)</p>
+          <div class="skill-item">
+            <div class="skill-item-header">
+              <span class="skill-name"><i class="fa-solid fa-code" aria-hidden="true"></i>HTML / CSS</span>
+              <span class="skill-level">Experto</span>
+            </div>
+            <div class="skill-progress">
+              <div class="skill-progress-fill" style="--progress:90%"></div>
+            </div>
+          </div>
+          <div class="skill-item">
+            <div class="skill-item-header">
+              <span class="skill-name"><i class="fa-brands fa-js" aria-hidden="true"></i>JavaScript</span>
+              <span class="skill-level">Intermedio</span>
+            </div>
+            <div class="skill-progress">
+              <div class="skill-progress-fill" style="--progress:55%"></div>
+            </div>
+          </div>
+          <div class="skill-item">
+            <div class="skill-item-header">
+              <span class="skill-name"><i class="fa-brands fa-php" aria-hidden="true"></i>PHP</span>
+              <span class="skill-level">Intermedio</span>
+            </div>
+            <div class="skill-progress">
+              <div class="skill-progress-fill" style="--progress:65%"></div>
+            </div>
+          </div>
           <p class="skills-subtext">React · TypeScript · Node.js · REST APIs</p>
         </div>
         
