Añadir barras de progreso a Back-end y corregir carrusel full width - Barras de progreso añadidas a Back-end (Java/Spring, SQL/MongoDB, Laravel/APIs) - Carrusel corregido para escapar del padding de la sección y ocupar todo el ancho

--- a/index.html
+++ b/index.html
@@ -219,7 +219,33 @@
         
         <div class="skills-text-column">
           <h3><i class="fa-solid fa-server" aria-hidden="true"></i>Back-end</h3>
-          <p>Java · Spring · SQL · MongoDB · Laravel · APIs</p>
+          <div class="skill-item">
+            <div class="skill-item-header">
+              <span class="skill-name"><i class="fa-brands fa-java" aria-hidden="true"></i>Java · Spring</span>
+              <span class="skill-level">Intermedio</span>
+            </div>
+            <div class="skill-progress">
+              <div class="skill-progress-fill" style="--progress:60%"></div>
+            </div>
+          </div>
+          <div class="skill-item">
+            <div class="skill-item-header">
+              <span class="skill-name"><i class="fa-solid fa-database" aria-hidden="true"></i>SQL · MongoDB</span>
+              <span class="skill-level">Intermedio</span>
+            </div>
+            <div class="skill-progress">
+              <div class="skill-progress-fill" style="--progress:55%"></div>
+            </div>
+          </div>
+          <div class="skill-item">
+            <div class="skill-item-header">
+              <span class="skill-name"><i class="fa-brands fa-laravel" aria-hidden="true"></i>Laravel · APIs</span>
+              <span class="skill-level">Intermedio</span>
+            </div>
+            <div class="skill-progress">
+              <div class="skill-progress-fill" style="--progress:50%"></div>
+            </div>
+          </div>
         </div>
         
         <div class="skills-text-column">
