--- a/index.html
+++ b/index.html
@@ -494,86 +494,59 @@
   <!-- Sección de contacto -->
   <section id="contacto">
     <h2>Contacto</h2>
-    <p class="contact-subtitle">¿Quieres contarme tu proyecto? Escríbeme y te responderé con la mayor brevedad.</p>
+    <p class="contact-subtitle">¿Tienes un proyecto en mente? Hablemos y diseñemos juntos la solución.</p>
     <div class="contact-wrapper">
-      <div class="contact-card contact-form-card">
-        <div class="contact-summary-head">
-          <span class="contact-badge contact-badge--blue">Contacto</span>
-          <h3>Hablemos en detalle</h3>
-        </div>
-        <div class="contact-intro">
-          <div class="contact-chip-row">
-            <span class="contact-chip"><i class="fa-solid fa-circle-check" aria-hidden="true"></i>Disponible</span>
-            <span class="contact-chip contact-chip--alt"><i class="fa-solid fa-language" aria-hidden="true"></i>Español / Inglés</span>
-            <span class="contact-chip contact-chip--focus"><i class="fa-solid fa-globe" aria-hidden="true"></i>Remoto & Barcelona</span>
-          </div>
-          <div class="contact-columns">
-            <div class="contact-copy">
-              <p class="contact-lead">Cuéntame qué necesitas y diseñaremos juntos la solución. Me implico en cada proyecto como si fuera propio.</p>
-              <ul class="contact-highlights">
-                <li><i class="fa-regular fa-clock" aria-hidden="true"></i>Respondo en menos de 24h en días laborables.</li>
-                <li><i class="fa-solid fa-location-dot" aria-hidden="true"></i>Trabajo desde Barcelona con equipos remotos o presenciales.</li>
-                <li><i class="fa-solid fa-handshake-angle" aria-hidden="true"></i>Especializado en apps multiplataforma y webs modernas.</li>
-              </ul>
-            </div>
-            <div class="contact-direct-info contact-direct-info--panel">
-              <a class="contact-direct-entry" href="mailto:pab4822@outlook.com">
-                <i class="fa-solid fa-envelope" aria-hidden="true"></i>
-                <div>
-                  <span>Correo</span>
-                  <strong>pab4822@outlook.com</strong>
-                </div>
-              </a>
-              <a class="contact-direct-entry" href="tel:+34684269329">
-                <i class="fa-solid fa-phone" aria-hidden="true"></i>
-                <div>
-                  <span>Teléfono</span>
-                  <strong>+34 684 26 93 29</strong>
-                </div>
-              </a>
-              <a class="contact-direct-entry" href="https://www.linkedin.com/in/pablo-arenas-mancebo-6a719b354/" target="_blank" rel="noopener noreferrer">
-                <i class="fab fa-linkedin-in" aria-hidden="true"></i>
-                <div>
-                  <span>LinkedIn</span>
-                  <strong>/pablo-arenas-mancebo</strong>
-                </div>
-              </a>
-              <a class="contact-direct-entry" href="https://github.com/Areman-05" target="_blank" rel="noopener noreferrer">
-                <i class="fab fa-github" aria-hidden="true"></i>
-                <div>
-                  <span>GitHub</span>
-                  <strong>@Areman-05</strong>
-                </div>
-              </a>
+      <div class="contact-main">
+        <div class="contact-info">
+          <div class="contact-info-item">
+            <i class="fa-solid fa-envelope" aria-hidden="true"></i>
+            <div>
+              <span>Email</span>
+              <a href="mailto:pab4822@outlook.com">pab4822@outlook.com</a>
             </div>
           </div>
-          <p class="contact-hint">Si prefieres otro canal, coméntalo en el formulario.</p>
+          <div class="contact-info-item">
+            <i class="fa-solid fa-phone" aria-hidden="true"></i>
+            <div>
+              <span>Teléfono</span>
+              <a href="tel:+34684269329">+34 684 26 93 29</a>
+            </div>
+          </div>
+          <div class="contact-info-item">
+            <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+            <div>
+              <span>LinkedIn</span>
+              <a href="https://www.linkedin.com/in/pablo-arenas-mancebo-6a719b354/" target="_blank" rel="noopener noreferrer">pablo-arenas-mancebo</a>
+            </div>
+          </div>
+          <div class="contact-info-item">
+            <i class="fab fa-github" aria-hidden="true"></i>
+            <div>
+              <span>GitHub</span>
+              <a href="https://github.com/Areman-05" target="_blank" rel="noopener noreferrer">@Areman-05</a>
+            </div>
+          </div>
         </div>
         <form id="contact-form" action="https://formspree.io/f/mbljeevl" method="POST">
-          <div class="form-grid">
-            <div class="form-column">
-              <label>
-                <span>Nombre</span>
-                <input type="text" name="nombre" placeholder="¿Cómo te llamas?" required>
-              </label>
-              <label>
-                <span>Email</span>
-                <input type="email" name="email" placeholder="tu@correo.com" required>
-              </label>
-              <label>
-                <span>Asunto</span>
-                <input type="text" name="asunto" placeholder="Tema del mensaje" required>
-              </label>
-            </div>
-            <div class="form-column">
-              <label class="form-field--message">
-                <span>Mensaje</span>
-                <textarea name="mensaje" placeholder="Cuéntame qué tienes en mente" required></textarea>
-              </label>
-            </div>
+          <div class="form-row">
+            <label>
+              <span>Nombre</span>
+              <input type="text" name="nombre" placeholder="Tu nombre" required>
+            </label>
+            <label>
+              <span>Email</span>
+              <input type="email" name="email" placeholder="tu@correo.com" required>
+            </label>
           </div>
+          <label>
+            <span>Asunto</span>
+            <input type="text" name="asunto" placeholder="¿Sobre qué quieres hablar?" required>
+          </label>
+          <label>
+            <span>Mensaje</span>
+            <textarea name="mensaje" placeholder="Cuéntame sobre tu proyecto..." required></textarea>
+          </label>
           <button type="submit" class="contact-btn">Enviar mensaje</button>
-          <p class="contact-footnote">También puedes escribirme por LinkedIn o GitHub si lo prefieres.</p>
         </form>
       </div>
     </div>
