--- a/index.html
+++ b/index.html
@@ -81,14 +81,47 @@
   <section id="sobre-mi">
     <h2>Sobre Mí</h2>
     <div class="sobre-mi-content">
-      <div class="foto-wrapper">
-        <div class="foto-aura"></div>
-        <div class="foto-overlay"></div>
-        <img src="imagenes/foto-perfil-2025.jpg" alt="Foto de perfil" class="foto-perfil">
+      <div class="sobre-mi-left">
+        <div class="foto-wrapper">
+          <div class="foto-aura"></div>
+          <div class="foto-overlay"></div>
+          <img src="imagenes/foto-perfil-2025.jpg" alt="Foto de perfil" class="foto-perfil">
+        </div>
+        <div class="sobre-mi-stats">
+          <div class="stat-item">
+            <span class="stat-number">2+</span>
+            <span class="stat-label">Años de experiencia</span>
+          </div>
+          <div class="stat-item">
+            <span class="stat-number">10+</span>
+            <span class="stat-label">Proyectos completados</span>
+          </div>
+        </div>
       </div>
-      <div class="texto-sobre-mi">
-        <p>Soy un joven estudiante del ciclo superior de Desarrollo de Aplicaciones Multiplataforma (DAM) con un gran interés por la programación y el desarrollo tecnológico. Durante mi formación he adquirido habilidades en la creación de aplicaciones, la resolución de problemas y el trabajo en equipo. Me considero una persona curiosa, responsable y con facilidad para aprender y adaptarme a nuevos entornos. Mi objetivo es seguir creciendo como desarrollador y aplicar mis conocimientos en proyectos que me permitan evolucionar profesional y personalmente.</p>
-        <a href="./pdf/CV-Pablo-Arenas-2025.pdf" class="btn-descargar-cv" download>Descargar CV</a>
+      <div class="sobre-mi-right">
+        <div class="sobre-mi-intro">
+          <p class="sobre-mi-lead">Desarrollador Multiplataforma apasionado por crear soluciones tecnológicas innovadoras.</p>
+          <p class="sobre-mi-text">Soy un joven estudiante del ciclo superior de Desarrollo de Aplicaciones Multiplataforma (DAM) con un gran interés por la programación y el desarrollo tecnológico. Durante mi formación he adquirido habilidades en la creación de aplicaciones, la resolución de problemas y el trabajo en equipo.</p>
+          <p class="sobre-mi-text">Me considero una persona curiosa, responsable y con facilidad para aprender y adaptarme a nuevos entornos. Mi objetivo es seguir creciendo como desarrollador y aplicar mis conocimientos en proyectos que me permitan evolucionar profesional y personalmente.</p>
+        </div>
+        <div class="sobre-mi-highlights">
+          <div class="highlight-item">
+            <i class="fa-solid fa-code" aria-hidden="true"></i>
+            <span>Código limpio y bien estructurado</span>
+          </div>
+          <div class="highlight-item">
+            <i class="fa-solid fa-users" aria-hidden="true"></i>
+            <span>Trabajo en equipo</span>
+          </div>
+          <div class="highlight-item">
+            <i class="fa-solid fa-lightbulb" aria-hidden="true"></i>
+            <span>Resolución de problemas</span>
+          </div>
+        </div>
+        <a href="./pdf/CV-Pablo-Arenas-2025.pdf" class="btn-descargar-cv" download>
+          <i class="fa-solid fa-download" aria-hidden="true"></i>
+          <span>Descargar CV</span>
+        </a>
       </div>
     </div>
   </section>
